--- a/4_decorator.ipynb
+++ b/4_decorator.ipynb
@@ -13,10 +13,10 @@
     "## D.1 소개\n",
     "\n",
     "* Decorator 패턴 (Structral Design Pattern)\n",
-    "* 내 안에 너 있다. It's you who is in my heart.\n",
-    "    * 2004년 드라마 '파리의 연인' 대사\n",
-    "   \n",
-    "* GoF \"Attach additional responsibilities to an object dynamically. Decorators provide a flexible alternative to subclassing for extending functionality.\""
+    "* \"내 안에 너 있다.\" It's you who is in my heart.\n",
+    "    * 2004년 드라마 '파리의 연인' 중.\n",
+    "    * 서정적인 대사이지만, Decorator를 이해하는 데 도움이 된다. 부모-자식의 상속관계를 사용하지 않지만, 다른 객체의 기능을 사용하는 방식을 구현하는 방식을 설명할 수 있다.\n",
+    "* GoF \"Attach additional responsibilities to an object dynamically. Decorators provide a flexible alternative to subclassing for extending functionality.\" "
    ]
   },
   {
@@ -59,9 +59,9 @@
     }
    },
    "source": [
-    "    * exercise (by Sat to git: 50% for 1 day late deadline) \n",
-    "        * case extension - 프로그래밍 'Beverage' CaramelMacchiato (HFDP Ch3)\n",
-    "        * new case - file.io 클래스 다이어그램 (HFDP Ch3)"
+    "* 프로그래밍 예례\n",
+    "    * case extension - 프로그래밍 'Beverage' CaramelMacchiato (HFDP Ch3)\n",
+    "    * new case - BufferedReader로 대문자 변환 (HFDP Ch3)"
    ]
   },
   {
@@ -74,14 +74,12 @@
    "source": [
     "## D.2 문제\n",
     "\n",
-    "* 약간의 기능을 추가하려면 새로운 클래스 생성\n",
-    "* 상속으로 문제를 풀면? 너무 많은 상속관계\n",
-    "* 상속이 아니면 어떻게 새로운 기능을 추가?\n",
-    "\n",
-    "* before\n",
+    "* 약간의 기능을 추가하기 위해 새로운 클래스를 생성하는 경우\n",
+    "* 상속으로 문제를 풀면, 너무 많은 상속관계가 발생할 수 있다.\n",
     "    * 상속을 사용 (p.82)\n",
     "    * 음료에 필요한 것을 추가 (우유, 두유, 휘핑크림, 모카...)\n",
-    "    * 클래스가 너무 많아지는 문제class explosion"
+    "    * 클래스가 너무 많아지는 문제class explosion\n",
+    "* 상속을 사용하지 않고 새로운 기능을 추가할 수 있을까?"
    ]
   },
   {
@@ -397,11 +395,29 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## D.4 Case Implementation\n",
+    "\n",
+    "* 조금씩 다른 기능을 추가하는 경우, 상속보다는 연관으로 확장성\n",
+    "* Beverage case (6.1)\n",
+    "* Windows case (6.2)\n",
+    "* java.io (6.3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "* after\n",
+    "### D.4.1 Beverage\n",
+    "\n",
+    "* 교재 HFDP Ch3 'Beverage'\n",
     "    * OCP설계원칙에 따라\n",
     "    * Beverage 추상클래스, 하위 concrete beverages\n",
     "    * 추가를 위해 Decorator 클래스\n",
@@ -505,35 +521,6 @@
     "CondimentDecorator <|-- Milk\n",
     "\n",
     "@enduml"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## D.4 Case Implementation\n",
-    "\n",
-    "* 조금씩 다른 기능을 추가하는 경우, 상속보다는 연관으로 확장성\n",
-    "* Beverage case (6.1)\n",
-    "* Windows case (6.2)\n",
-    "* java.io (6.3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### D.4.1 Beverage\n",
-    "\n",
-    "* 교재 HFDP Ch3 'Beverage'"
    ]
   },
   {
@@ -1163,19 +1150,20 @@
     "    * 1계층 InputStream\n",
     "        * 2계층 FileInputStream은 Sytem File에서 읽어옴 (1회에 1 바이트 씩)\n",
     "        * 3계층 BufferedInputStream은 InputStream에서 읽어오고, Buffer를 이용하기 때문에 빠름.\n",
-    "            ```\n",
-    "            BufferedInputStream bis =\n",
-    "                new BufferedInputStream(new FileInputStream(new File('README.md'));\n",
-    "            ```\n",
+    "```\n",
+    "BufferedInputStream bis =\n",
+    "    new BufferedInputStream(new FileInputStream(new File('README.md'));\n",
+    "```\n",
+    "\n",
     "    * 1계층 Reader\n",
     "        * 2계층 InputStreamReader, BufferedReader\n",
     "        * 3계층 FileReader\n",
     "            * 1회에 2 바이트 씩 - 문자가 2 바이트이므로\n",
     "            * 문자 파일을 읽을 경우 사용\n",
     "            * default encoding방식으로 텍스트 파일을 읽음\n",
-    "            ```\n",
-    "            BufferedReader br = new BufferedReader(new FileReader(new File('README.md')));\n",
-    "            ```"
+    "```\n",
+    "BufferedReader br = new BufferedReader(new FileReader(new File('README.md')));\n",
+    "```"
    ]
   },
   {
@@ -1190,16 +1178,17 @@
     "    * default encoding으로 읽어오는 경우 -> 깨질 수 있다.\n",
     "\n",
     "    * InputStreamReader: byte streams --> character streams\n",
-    "        ```\n",
-    "        FileInputStream fis = new FileInputStream(\"test.txt\");\n",
-    "        InputStreamReader isr = new InputStreamReader(fis, \"UTF8\");\n",
-    "        BufferedReader br = new BufferedReader(isr);\n",
-    "        ```\n",
+    "```\n",
+    "FileInputStream fis = new FileInputStream(\"test.txt\");\n",
+    "InputStreamReader isr = new InputStreamReader(fis, \"UTF8\");\n",
+    "BufferedReader br = new BufferedReader(isr);\n",
+    "```\n",
+    "\n",
     "    * OutputStreamWriter: character streams --> byte streams\n",
-    "        ```\n",
-    "        FileOutputStream fos = new FileOutputStream(\"test.txt\");\n",
-    "        Writer out = new OutputStreamWriter(fos, \"UTF8\");\n",
-    "        ```"
+    "```\n",
+    "FileOutputStream fos = new FileOutputStream(\"test.txt\");\n",
+    "Writer out = new OutputStreamWriter(fos, \"UTF8\");\n",
+    "```"
    ]
   },
   {
@@ -1302,15 +1291,15 @@
     "    * System property에서 읽기\n",
     "    * 현재 폴더 읽기\n",
     "\n",
-    "        ```\n",
-    "        > import java.io.File\n",
-    "        > System.getProperty(\"user.home\")\n",
-    "        \"/Users/media\"\n",
-    "        > File myhome=new File(System.getProperty(\"user.home\"))\n",
-    "        > String cwd=new java.io.File( \".\" ).getCanonicalPath();\n",
-    "        > cwd\n",
-    "        \"/Users/media/Code/git/sd\"\n",
-    "        ```"
+    "```\n",
+    "> import java.io.File\n",
+    "> System.getProperty(\"user.home\")\n",
+    "\"/Users/media\"\n",
+    "> File myhome=new File(System.getProperty(\"user.home\"))\n",
+    "> String cwd=new java.io.File( \".\" ).getCanonicalPath();\n",
+    "> cwd\n",
+    "\"/Users/media/Code/git/sd\"\n",
+    "```"
    ]
   },
   {
@@ -1348,43 +1337,45 @@
    "source": [
     "* 파일에서 읽기\n",
     "    * FileInputStream\n",
+    "```\n",
+    "> import java.io.FileInputStream\n",
+    "> FileInputStream isReadme=new FileInputStream(readme)\n",
+    "> isReadme.read()\n",
+    "35\n",
+    "> (char)35\n",
+    "'#'\n",
+    "```\n",
     "\n",
-    "        ```\n",
-    "        > import java.io.FileInputStream\n",
-    "        > FileInputStream isReadme=new FileInputStream(readme)\n",
-    "        > isReadme.read()\n",
-    "        35\n",
-    "        > (char)35\n",
-    "        '#'\n",
-    "        ```\n",
     "    * BufferedInputStream\n",
-    "        ```      \n",
-    "        > import java.io.BufferedInputStream\n",
-    "        > BufferedInputStream bis=new BufferedInputStream(isReadme)\n",
-    "        > bis.read()\n",
-    "        101\n",
-    "        > (char)101\n",
-    "        'e'\n",
-    "        ```\n",
+    "```      \n",
+    "> import java.io.BufferedInputStream\n",
+    "> BufferedInputStream bis=new BufferedInputStream(isReadme)\n",
+    "> bis.read()\n",
+    "101\n",
+    "> (char)101\n",
+    "'e'\n",
+    "```\n",
+    "\n",
     "    * abstract InputStream\n",
-    "        ```\n",
-    "        > import java.io.InputStream\n",
-    "        > InputStream is=new BufferedInputStream(isReadme)\n",
-    "        > is.read()\n",
-    "        ```\n",
+    "```\n",
+    "> import java.io.InputStream\n",
+    "> InputStream is=new BufferedInputStream(isReadme)\n",
+    "> is.read()\n",
+    "```\n",
+    "\n",
     "    * FileReader\n",
-    "        ```\n",
-    "        > import java.io.FileReader;\n",
-    "        > FileReader fr =new FileReader(readme);\n",
-    "        > BufferedReader br =new BufferedReader(fr);\n",
-    "        > br.readLine()\n",
-    "        \"# 자바\"\n",
-    "        > import java.io.FileWriter;\n",
-    "        > import java.io.PrintWriter;\n",
-    "        > PrintWriter out=new PrintWriter(new FileWriter(\"hello.txt\"))\n",
-    "        > out.printf(\"Hello %s\", \"jsl\");\n",
-    "        > out.close()\n",
-    "               ```"
+    "```\n",
+    "> import java.io.FileReader;\n",
+    "> FileReader fr =new FileReader(readme);\n",
+    "> BufferedReader br =new BufferedReader(fr);\n",
+    "> br.readLine()\n",
+    "\"# 자바\"\n",
+    "> import java.io.FileWriter;\n",
+    "> import java.io.PrintWriter;\n",
+    "> PrintWriter out=new PrintWriter(new FileWriter(\"hello.txt\"))\n",
+    "> out.printf(\"Hello %s\", \"jsl\");\n",
+    "> out.close()\n",
+    "```"
    ]
   },
   {
