--- a/1_hello_goodsw.ipynb
+++ b/1_hello_goodsw.ipynb
@@ -307,6 +307,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Turtle\tmoveTo(double x, double y)\n",
+    "Moves the turtle to the given position.\n",
+    "Turtle\tmoveTo(java.awt.geom.Point2D.Double pt)\n",
+    "Moves the turtle to the given position."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
@@ -335,12 +349,14 @@
     "@startuml\n",
     "Turtle <|-- WeightTurtle\n",
     "class Turtle {\n",
-    "    +bk()\n",
-    "    +fd()\n",
-    "    +left()\n",
-    "    +right()\n",
-    "    +penUp()\n",
-    "    +penDown()\n",
+    "    +bk(distance:double):Turtle\n",
+    "    +fd(distance:double):Turtle\n",
+    "    +left(degrees:double):Turtle\n",
+    "    +right(degrees:double):Turtle\n",
+    "    +penUp():Turtle\n",
+    "    +penDown():Turtle\n",
+    "    +moveTo(x:double,y:double):Turtle\n",
+    "    +moveTo(pt:java.awt.geom.Point2D.Double):Turtle\n",
     "}\n",
     "class WeightTurtle {\n",
     "  #weight:int\n",
