--- a/5_factory.ipynb
+++ b/5_factory.ipynb
@@ -8,19 +8,46 @@
     }
    },
    "source": [
-    "# 강의내용\n",
+    "# Factory 패턴\n",
     "\n",
-    "* 교재 4장 HFDP Ch4\n",
-    "* Factory 패턴 (Creational Design Pattern)\n",
-    "* 프로그래밍 'Pizza' (HFDP Ch4)\n",
-    "* TOC\n",
-    "    * intro\n",
-    "    * problems\n",
-    "    * before\n",
-    "    * design\n",
-    "    * after\n",
-    "    * case implementation\n",
-    "    * exercise (by Sat to git: 50% for 1 day late deadline) \n",
+    "## F.1 소개\n",
+    "\n",
+    "* Factory 패턴은 Creational Design Pattern, 객체를 생성할 경우 사용한다.\n",
+    "* Client는 실제 사용하는 객체를 명시할 필요 없다. 팩토리가 생성해서 반환하는 객체를 사용한다.\n",
+    "* 사용할 객체가 많거나 객체를 생성하는 방법이 변경되어도, 클라이언트 측의 변경이 적어진다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 디자인패턴 요소\n",
+    "\n",
+    "요소 | 설명\n",
+    "---|---\n",
+    "name | Factory\n",
+    "problem | 생성한 구체클래스의 변경에 따른 연쇄 수정.\n",
+    "solution | 생성을 감춤 (단순 factory, factory method, abstract factory\n",
+    "consequence | 확장성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 프로그래밍 예제\n",
+    "    * 'Pizza' (HFDP Ch4)\n",
+    "    * java valueOf(), getInstance(), newInstance()\n",
+    "    * HotDraw shape    \n",
+    "    * 과제\n",
     "        * case extension\n",
     "            * simple factory - potato pizza\n",
     "            * factory method - SMstyle potato pizza\n",
@@ -36,140 +63,29 @@
     }
    },
    "source": [
-    "# 1. Factory 패턴\n",
+    "## F.2 문제\n",
     "\n",
-    "\n",
-    "* Client - 생성할 구체클래스를 명시할 필요 없다. 팩토리가 생성해서 반환하는 객체를 사용함.\n",
-    "* 객체종류가 늘어나도 클라이언트 소스 변경 정도 적다.\n",
-    "* 구분\n",
-    "    * simple factory\n",
-    "        * encapsulate instantiation. 객체생성을 클래스에게 맡기지 않고 팩토리 클래스가 담당한다.\n",
-    "        * 팩토리 클래스의 구조가 단순하고, 경우에 따라 생성할 클래스를 결정하는 역할을 하게 된다.\n",
-    "        * 클래스를 생성하는 로직이 한 곳에 모여있어, 생성하는 방식이 변경되어도 단순팩토리만 수정하게 된다.\n",
-    "    * factory method\n",
-    "        * 단순팩토리에서의 클래스 생성기능을 가지고 있다는 점은 같다.\n",
-    "        * 그러나, 팩토리함수는 상속구조를 가지고 있다는 점이 다르다.\n",
-    "        * defer instantiation to subclasses. 객체생성을 하위클래스에게 위임한다.\n",
-    "        * GoF \"Define an interface for creating an object, but let the classes which implement the interface decide which class to instantiate. The Factory method lets a class defer instantiation to subclasses\"\n",
-    "    * abstract factory\n",
-    "        * 실제클래스가 아니라, 추상팩토리에게 클래스 생성기능을 맡긴다는 점에서 차이가 있다.\n",
-    "        * GoF \"to provide an interface for creating families of related or dependent objects without specifying their concrete classes.\"\n",
-    "\n",
-    "* cases\n",
-    "    * HFDP Pizza\n",
-    "    * java valueOf(), getInstance(), newInstance()\n",
-    "    * HotDraw shape\n",
-    "\n",
-    "* 디자인패턴 요소\n",
-    "\n",
-    "요소 | 설명\n",
-    "---|---\n",
-    "name | Factory\n",
-    "problem | 생성한 구체클래스의 변경에 따른 연쇄 수정.\n",
-    "solution | 생성을 감춤 (단순 factory, factory method, abstract factory\n",
-    "consequence | 확장성"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 2. 문제\n",
-    "\n",
-    "* new의 문제\n",
-    "    * new()는 인터페이스가 아니라 구체클래스를 생성.\n",
-    "    * 구체 클래스가 많아지거나, 변경되면?\n",
-    "* 인터페이스를 사용하면 새로운 클래스가 추가되거나, 변경에도 많은 수정이 필요없슴.\n",
-    "* 인터페이스란 자바에서 'implements'하는 인터페이스만을 뜻하는 것이 아니라, 슈퍼타잎(클래스 또는 인터페이스)을 구현하는 것을 말함 (p.117)"
+    "* 객체를 생성하는 'new'의 문제\n",
+    "    * 'new'는 인터페이스가 아니라 구체클래스를 생성.\n",
+    "    * 'new'를 호출. 구체클래스를 생성. DecoyDuck, MallardDuck, RubberDuck.\n",
+    "    * not closed for modification (생성할 객체가 늘어나면 클라이언트 수정량 많아짐)\n",
+    "    * 구체 클래스가 많아지거나, 변경되면 클라이언트 측의 변경이 뒤 따른다.\n",
+    "* 인터페이스를 사용하면 새로운 클래스가 추가되거나, 변경에도 많은 수정이 필요없다.\n",
+    "* 인터페이스란 자바에서 'implements'하는 인터페이스만을 뜻하는 것이 아니라, 슈퍼타잎(클래스 또는 인터페이스)을 구현하는 것을 말한다 (p.117)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/media/Code/git/sd/lib\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
-      "Dot executable is /opt/local/bin/dot\n",
-      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
-      "Installation seems OK. File generation OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import glob\n",
-    "\n",
-    "mywd=%pwd\n",
-    "myplantdir=os.path.join(mywd,'lib')\n",
-    "mydotdir=!which dot\n",
-    "mydot=mydotdir[0]\n",
-    "\n",
-    "%cd {myplantdir}\n",
-    "glob.glob(r'./*.jar')\n",
-    "os.environ['GRAPHVIZ_DOT']=mydot\n",
-    "!java -jar {myplantdir}/plantuml.jar -testdot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installed plantuml_magics.py. To use it, type:\n",
-      "  %load_ext plantuml_magics\n"
-     ]
-    }
-   ],
-   "source": [
-    "%install_ext https://raw.githubusercontent.com/sberke/ipython-plantuml/master/plantuml_magics.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "%load_ext plantuml_magics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 3. before\n",
-    "\n",
-    "* new()를 호출. 구체클래스를 생성. DecoyDuck, MallardDuck, RubberDuck.\n",
-    "* not closed for modification (생성할 객체가 늘어나면 클라이언트 수정량 많아짐)"
+    "import iplantuml"
    ]
   },
   {
@@ -178,7 +94,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -211,13 +127,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# 4. 설계\n",
+    "## F.3 설계\n",
     "\n",
     "* 상속\n",
     "    * 컴파일시점에 supertype을 사용 -> 사용할 객체 타잎만 결정하고 (추상화)\n",
-    "    * 런타임에 실제 사용할 객체(subtype)를 결정\n",
+    "    * 런타임에 실제 사용할 객체(subtype)를 결정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* DIP (Dependency Inversion Principle) (p.143)\n",
     "    * 구체클래스를 참조하지 않음 -> no variable should hold a ref to a concrete class\n",
     "    * 구체클래스를 상속받지말 것! -> No class should derive from a concrete class\n",
@@ -228,21 +158,38 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "* Simple Factory\n",
-    "    * if문으로 사용객체의 new()를 결정.\n",
-    "* Factory Method\n",
-    "    * Creator (Factory)\n",
-    "        * 인터페이스/(추상)클래스로 구현.\n",
-    "        * factory method 갖고, child클래스가 재정의함.\n",
-    "        * factory method가 사용할 객체 반환\n",
-    "    * Product - factory에 대응\n",
-    "* Abstract Factory\n",
-    "    * Creator - factory method\n",
-    "    * Product - product families"
+    "* Factory의 종류\n",
+    "    * simple factory\n",
+    "        * encapsulate instantiation. 객체생성을 클래스에게 맡기지 않고 팩토리 클래스가 담당한다.\n",
+    "        * 팩토리 클래스의 구조가 단순하고, 경우에 따라 생성할 클래스를 결정하는 역할을 하게 된다.\n",
+    "        * 클래스를 생성하는 로직이 한 곳에 모여있어, 생성하는 방식이 변경되어도 단순팩토리만 수정하게 된다.\n",
+    "    * factory method\n",
+    "        * 단순팩토리에서의 클래스 생성기능을 가지고 있다는 점은 같다.\n",
+    "        * 그러나, 팩토리함수는 상속구조를 가지고 있다는 점이 다르다.\n",
+    "        * defer instantiation to subclasses. 객체생성을 하위클래스에게 위임한다.\n",
+    "        * GoF \"Define an interface for creating an object, but let the classes which implement the interface decide which class to instantiate. The Factory method lets a class defer instantiation to subclasses\"\n",
+    "    * abstract factory\n",
+    "        * 실제클래스가 아니라, 추상팩토리에게 클래스 생성기능을 맡긴다는 점에서 차이가 있다.\n",
+    "        * GoF \"to provide an interface for creating families of related or dependent objects without specifying their concrete classes.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Factory의 종류 | 구현 방법\n",
+    "----------|----------\n",
+    "Simple Factory | if문으로 사용객체의 new()를 결정.\n",
+    "Factory Method | Creator (Factory)는 인터페이스/(추상)클래스로 구현, factory method 가지고 child클래스가 재정의한다.factory method가 사용할 객체 반환.<br>Product - factory에 대응\n",
+    "Abstract Factory | Creator - factory method<br>Product - product families"
    ]
   },
   {
@@ -289,21 +236,7 @@
     }
    },
    "source": [
-    "# 5. after\n",
-    "\n",
-    "* DIP\n",
-    "* 3가지 factory"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## 5.1. simple factory\n",
+    "### F.3.1 simple factory\n",
     "\n",
     "* p.115 - if문으로 어느 객체를 생성할지 판단, 클라이언트에게 맞는 객체 반환\n",
     "* 클라이언트PizzaStore는 직접 new하지 않고 객체를 사용."
@@ -453,7 +386,7 @@
     }
    },
    "source": [
-    "## 5.2 factory method\n",
+    "### F.3.2 factory method\n",
     "\n",
     "* PizzaStore에 abstract Pizza createPizza(String type) 추상함수 넣음. 이를 factory method라고 함.\n",
     "* PizzaStore에 상속구조로 실제 사용할 클래스를 늦춰 런타임에 결정.\n",
@@ -464,7 +397,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -523,9 +459,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## 5.3 Abstract Factory\n",
+    "### F.3.3 Abstract Factory\n",
     "\n",
     "* creator\n",
     "    * abstract factory를 사용한다. \n",
@@ -547,79 +487,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "%load_ext gvmagic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "image/svg+xml": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
-       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
-       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
-       "<!-- Generated by graphviz version 2.38.0 (20140413.2041)\n",
-       " -->\n",
-       "<!-- Title: G Pages: 1 -->\n",
-       "<svg width=\"134pt\" height=\"204pt\"\n",
-       " viewBox=\"0.00 0.00 134.00 204.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 200)\">\n",
-       "<title>G</title>\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-200 130,-200 130,4 -4,4\"/>\n",
-       "<!-- a -->\n",
-       "<g id=\"node1\" class=\"node\"><title>a</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"63\" cy=\"-178\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"63\" y=\"-174.3\" font-family=\"Times,serif\" font-size=\"14.00\">a</text>\n",
-       "</g>\n",
-       "<!-- b -->\n",
-       "<g id=\"node2\" class=\"node\"><title>b</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"63\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"63\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">b</text>\n",
-       "</g>\n",
-       "<!-- a&#45;&gt;b -->\n",
-       "<g id=\"edge1\" class=\"edge\"><title>a&#45;&gt;b</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M63,-159.813C63,-151.789 63,-142.047 63,-133.069\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"66.5001,-133.029 63,-123.029 59.5001,-133.029 66.5001,-133.029\"/>\n",
-       "</g>\n",
-       "<!-- c -->\n",
-       "<g id=\"node3\" class=\"node\"><title>c</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n",
-       "</g>\n",
-       "<!-- b&#45;&gt;c -->\n",
-       "<g id=\"edge2\" class=\"edge\"><title>b&#45;&gt;c</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M50.7082,-88.6965C46.4829,-82.8183 42.0528,-75.8671 39,-69 35.8088,-61.8215 33.3936,-53.6701 31.598,-46.0628\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"35.0006,-45.2353 29.5187,-36.169 28.1503,-46.675 35.0006,-45.2353\"/>\n",
-       "<text text-anchor=\"middle\" x=\"62\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">depends</text>\n",
-       "</g>\n",
-       "<!-- d -->\n",
-       "<g id=\"node4\" class=\"node\"><title>d</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"99\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"99\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">d</text>\n",
-       "</g>\n",
-       "<!-- b&#45;&gt;d -->\n",
-       "<g id=\"edge3\" class=\"edge\"><title>b&#45;&gt;d</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M74.0859,-88.5075C77.9395,-82.6089 82.0344,-75.6931 85,-69 88.2135,-61.7474 90.872,-53.5727 92.9774,-45.9669\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"96.417,-46.6436 95.5057,-36.088 89.6355,-44.908 96.417,-46.6436\"/>\n",
-       "</g>\n",
-       "</g>\n",
-       "</svg>\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Cell magic `%%dot` not found.\n"
+     ]
     }
    ],
    "source": [
@@ -714,12 +602,10 @@
     }
    },
    "source": [
-    "# 6. Case Implementation\n",
+    "## F.4 사례\n",
     "\n",
-    "## 6.1 Pizza\n",
-    "* 교재 HFDP Ch4 'Pizza'\n",
-    "\n",
-    "## 6.2 Shape"
+    "### F.4.1 Pizza\n",
+    "* 교재 HFDP Ch4 'Pizza'"
    ]
   },
   {
@@ -730,7 +616,7 @@
     }
    },
    "source": [
-    "### 6.1.1 simple factory"
+    "#### F.4.1.1 simple factory"
    ]
   },
   {
@@ -739,7 +625,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -949,7 +835,7 @@
     }
    },
    "source": [
-    "### 6.1.2 factory method"
+    "#### F.4.1.2 factory method"
    ]
   },
   {
@@ -1337,7 +1223,7 @@
     }
    },
    "source": [
-    "### 6.1.3 abstract factory\n",
+    "#### F.4.1.3 abstract factory\n",
     "\n",
     "* Pizza absract factory\n",
     "    * PizzaStore에서 creator(factory)를 생성해서 Pizza에 전달\n",
@@ -1959,7 +1845,7 @@
    "execution_count": 42,
    "metadata": {
     "collapsed": false,
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1999,9 +1885,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## 6.2 Shape"
+    "### F.4.2 Shape"
    ]
   },
   {
