--- a/4_decorator.ipynb
+++ b/4_decorator.ipynb
@@ -13,11 +13,11 @@
     "## D.1 소개\n",
     "\n",
     "* Decorator 패턴 (Structral Design Pattern)\n",
-    "* \"내 안에 너 있다.\" It's you who is in my heart.\n",
-    "    * 2004년 드라마 '파리의 연인' 중.\n",
-    "    * 서정적인 대사이지만, Decorator를 이해하는 데 도움이 된다.\n",
-    "    * 같은 부모를 가진 다른 객체를 생성자에 포함하여 그 기능을 사용하는 방식을 구현하는 방식을 설명할 수 있다.\n",
-    "* GoF \"Attach additional responsibilities to an object dynamically. Decorators provide a flexible alternative to subclassing for extending functionality.\" "
+    "* \"내 안에 너 있다.\"\n",
+    "    * 2004년 드라마 '파리의 연인'에서 당시 유명했던 남자배우가 고백을 하는 대사. \"It's you who is in my heart...\"\n",
+    "    * Decorator는 \"It's a super class who is in a child decorator\"로 이해할 수 있다.\n",
+    "    * 같은 부모를 가진 다른 객체를 생성자에 포함하여 기능을 사용하는 패턴이다.\n",
+    "* GoF '상속'으로 기능을 확장하지 않고, 기능을 동적으로 추가하는 패턴이다 \"Attach additional responsibilities to an object dynamically. Decorators provide a flexible alternative to subclassing for extending functionality.\""
    ]
   },
   {
@@ -47,10 +47,10 @@
    },
    "source": [
     "* 사례\n",
-    "    * GoF Windows and borders, scrollbars and menubars (see Wiki for a java implementation)\n",
-    "    * The java.io package\n",
-    "    * Musical instruments (audio waves) and effects (flanger, wah-wah, and so on)\n",
-    "* 프로그래밍 예례\n",
+    "    * 윈도우를 꾸미는 사례로 윈도우에 borders, scrollbars, menubars를 추가할 수 있다 (see 'Wikipedia' for a java implementation)\n",
+    "    * Java의 파일 입출력에서 Decorator 패턴을 사용한다 (java.io package)\n",
+    "    * 음악audio waves에 여러 효과effects를 넣는 경우 사용할 수 있다 (flanger, wah-wah 등)\n",
+    "* 프로그래밍 과제\n",
     "    * case extension - 프로그래밍 'Beverage' CaramelMacchiato (HFDP Ch3)\n",
     "    * new case - BufferedReader로 대문자 변환 (HFDP Ch3)"
    ]
