--- a/4_decorator.ipynb
+++ b/4_decorator.ipynb
@@ -50,6 +50,7 @@
     "    * 윈도우를 꾸미는 사례로 윈도우에 borders, scrollbars, menubars를 추가할 수 있다 (see 'Wikipedia' for a java implementation)\n",
     "    * Java의 파일 입출력에서 Decorator 패턴을 사용한다 (java.io package)\n",
     "    * 음악audio waves에 여러 효과effects를 넣는 경우 사용할 수 있다 (flanger, wah-wah 등)\n",
+    "    * 여러 나라의 통화 Currency의 문제.\n",
     "* 프로그래밍 과제\n",
     "    * case extension - 프로그래밍 'Beverage' CaramelMacchiato (HFDP Ch3)\n",
     "    * new case - BufferedReader로 대문자 변환 (HFDP Ch3)"
@@ -341,7 +342,7 @@
    },
    "source": [
     "* ConcreteDecorator가 Component 클래스의 함수를 재정의한다 (override)\n",
-    "* 부모 생성자 Decorator(Component)는 ConcreteDecorator에 상속되지 않느다.\n",
+    "* 부모 생성자 'Decorator(Component)'는 'ConcreteDecorator'에 상속되지 않느다.\n",
     "    * 생성자는 자신을 생성하는 특별한 기능을 가지고 있기 때문에, 상속되지 않는다.\n",
     "    * Java Language specification, 8.8. Constructor Declarations을 참조\n",
     "\"Constructor declarations are not members. They are never inherited and therefore are not subject to hiding or overriding.\""
@@ -483,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Mik(Beverage)는 부모 생성자, CondimentDecorator(Component)를 상속받아 구현하지 않는다.\n"
+    "* Mik(Beverage)는 부모 생성자 'CondimentDecorator(Component)'를 상속받아 구현하지 않는다."
    ]
   },
   {
@@ -846,7 +847,7 @@
    "source": [
     "### D.4.2 Windows\n",
     "\n",
-    "* wiki windows"
+    "* Decorator pattern 위키피디아 https://en.wikipedia.org/wiki/Decorator_pattern"
    ]
   },
   {
@@ -1180,8 +1181,7 @@
    },
    "source": [
     "* 한글\n",
-    "    * default encoding으로 읽어오는 경우 -> 깨질 수 있다.\n",
-    "\n",
+    "    * default encoding이 'unicode'가 아닌 경우, 깨질 수 있다.\n",
     "    * InputStreamReader: byte streams --> character streams\n",
     "```\n",
     "FileInputStream fis = new FileInputStream(\"test.txt\");\n",
@@ -1293,17 +1293,45 @@
    },
    "source": [
     "* 파일 명 준비\n",
-    "    * System property에서 읽기\n",
-    "    * 현재 폴더 읽기\n",
+    "    * System property를 사용해서 디렉토리 설정 읽기\n",
+    "\n",
+    "Property 키 | 설명 | 예\n",
+    "----------|----------|----------\n",
+    "\"file.separator\" | 리눅스 \"/\" 또는 윈도우 \"\\\" | /\n",
+    "\"java.class.path\" | classpath | \"/home/js/Code/lib/drjava-stable-20140826-r5761.jar\"\n",
+    "\"java.home\" | Java Runtime Environment (JRE) 설치 경로 | \"/usr/lib/jvm/java-8-openjdk-amd64/jre\"\n",
+    "\"line.separator\" | 텍스트 파일의 줄 바꿈 구분자\n",
+    "\"os.name\" | 운영체제 명 | Linux\n",
+    "\"path.separator\" | classpath의 구분자 리눅스 ':' 또는 윈도우 ';'\n",
+    "\"user.dir\" | user의 작업 디렉토리 | /home/js\n",
+    "\"user.home\" | user의 home 디렉토리 | /home/js\n",
+    "\n",
     "\n",
     "```\n",
     "> import java.io.File\n",
     "> System.getProperty(\"user.home\")\n",
     "\"/Users/media\"\n",
     "> File myhome=new File(System.getProperty(\"user.home\"))\n",
-    "> String cwd=new java.io.File( \".\" ).getCanonicalPath();\n",
+    "> String cwd=new java.io.File( \".\" ).getCanonicalPath(); 유일한 절대경로 (절대경로는 symlink등 여러 값을 가질 수 있다)\n",
     "> cwd\n",
     "\"/Users/media/Code/git/sd\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 참고: static 함수 genenv를 사용하여 환경변수를 읽어 올 수 있다.\n",
+    "* System property는 JVM, genenv는 운영체제 변수라는 차이가 있다.\n",
+    "\n",
+    "```\n",
+    "> System.getenv(); 전체를 읽을 경우\n",
+    "> System.getenv(\"PATH\"); 'PATH'만 읽을 경우\n",
     "```"
    ]
   },
