--- a/4_decorator.ipynb
+++ b/4_decorator.ipynb
@@ -1119,29 +1119,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### D.4.3 java.io\n",
     "\n",
-    "* java.io는 decorator 패턴을 사용한다.\n",
-    "    * java.io의 클래스는 생성자에 Reader, InputStream과 같은 추상클래스를 포함하여 가지고 있다.\n",
-    "    * 사례\n",
-    "        ```\n",
-    "        String operation = (new BufferedReader(new InputStreamReader(System.in))).readLine();\n",
-    "        ```\n",
-    "    \n",
-    "* 자바 I/O 추상클래스 4개\n",
-    "    * InputStream\n",
-    "        * 바이트 단위로 읽음\n",
-    "        * binary IO 오디오, 비디오 등 바이너리 파일을 읽을 경우\n",
-    "    * OutputStream - 바이트\n",
-    "    * Reader\n",
-    "        * 문자 단위로 읽음 --> character IO\n",
-    "    * Writer - 문자\n"
+    "* 자바의 입출력은 io 패키지에서 처리하고, 다음 4개의 클래스를 중심으로, decorator 패턴을 사용한다.\n",
+    "* 이들은 추상클래스라서 직접 사용할 수 없다는 점을 유의한다.\n",
+    "\n",
+    "구분 | 입력 | 출력\n",
+    "-----|-----|-----\n",
+    "바이트 | InputStream | OutputStream\n",
+    "문자 | Reader | Writer\n",
+    "\n",
+    "* 예를 들어, BufferedReader의 경우 생성자에 다른 객체 InputStream를 포함하여 가지고 있다.\n",
+    "```\n",
+    "String line = (new BufferedReader(new InputStreamReader(System.in))).readLine();\n",
+    "```\n"
    ]
   },
   {
@@ -1152,7 +1145,7 @@
     }
    },
    "source": [
-    "* Input 상속 계층\n",
+    "* 입출력 중 '입력'의 상속 계층을 살펴 보자.\n",
     "    * 1계층 InputStream\n",
     "        * 2계층 FileInputStream은 Sytem File에서 읽어옴 (1회에 1 바이트 씩)\n",
     "        * 3계층 BufferedInputStream은 InputStream에서 읽어오고, Buffer를 이용하기 때문에 빠름.\n",
@@ -1292,7 +1285,7 @@
     }
    },
    "source": [
-    "* 파일 명 준비\n",
+    "* File 객체에 필요한 Pathname 환경\n",
     "    * System property를 사용해서 디렉토리 설정 읽기\n",
     "\n",
     "Property 키 | 설명 | 예\n",
@@ -1308,10 +1301,10 @@
     "\n",
     "\n",
     "```\n",
-    "> import java.io.File\n",
-    "> System.getProperty(\"user.home\")\n",
+    "> import java.io.File;\n",
+    "> System.getProperty(\"user.home\");\n",
     "\"/Users/media\"\n",
-    "> File myhome=new File(System.getProperty(\"user.home\"))\n",
+    "> File myhome=new File(System.getProperty(\"user.home\")); pathname은 디렉토리, 파일이 모두 가능하다.\n",
     "> String cwd=new java.io.File( \".\" ).getCanonicalPath(); 유일한 절대경로 (절대경로는 symlink등 여러 값을 가질 수 있다)\n",
     "> cwd\n",
     "\"/Users/media/Code/git/sd\"\n",
@@ -1343,21 +1336,24 @@
     }
    },
    "source": [
-    "* 파일\n",
-    "    * java.io.File의 생성자는 File 또는 String 모두 사용할 수 있다.\n",
-    "    * java.io.File은 파일이고, 다른 언어와 달리 읽을 수 없다. 읽으려면 inputstream, reader를 사용한다.\n",
+    "* File 객체\n",
+    "    * java.io.File의 생성자는 File 객체 또는 String 모두 사용할 수 있다.\n",
+    "    * java.io.File은 파일이고, 다른 언어와 달리 읽을 수 없다 (read() 함수가 없다).\n",
+    "    읽으려면 inputstream, reader를 사용한다.\n",
+    "    * File 객체의 pathname은 디렉토리 또는 파일명 모두 가능한다.\n",
     "    * 파일 명을 만들 때, 폴더 구분자에 주의한다.\n",
     "    * 윈도우 폴더 구분자는 back slash 2개를 겹쳐 쓴다 '\\\\\\'\n",
-    "        ```\n",
-    "        > String readmePath0 = \"C:\\\\user\\\\data\\\\README.md\";\n",
-    "        > File readme1 = new File(readme1Path0);\n",
-    "        ```\n",
+    "```\n",
+    "> String readmePath0 = \"C:\\\\user\\\\data\\\\README.md\";\n",
+    "> File readme1 = new File(readme1Path0);\n",
+    "```\n",
+    "\n",
     "    * 리눅스 폴더 구분자는 forward slash를 사용한다 '/'\n",
-    "        ```\n",
-    "        > File readme=new File(cwd,\"README.md\")\n",
-    "        > readme\n",
-    "        /Users/media/Code/git/sd/README.md\n",
-    "        ```"
+    "```\n",
+    "> File readme=new File(cwd,\"README.md\")\n",
+    "> readme\n",
+    "/Users/media/Code/git/sd/README.md\n",
+    "```"
    ]
   },
   {
