--- a/5_factory.ipynb
+++ b/5_factory.ipynb
@@ -184,11 +184,11 @@
     }
    },
    "source": [
-    "Factory의 종류 | 구현 방법\n",
-    "----------|----------\n",
-    "Simple Factory | if문으로 사용객체의 new()를 결정.\n",
-    "Factory Method | Creator - abstract factory method (자식 클래스가 factory method를 재정의해 실제 사용할 객체 반환.<br>Product - factory에 대응\n",
-    "Abstract Factory | Creator - abstract factory<br>Product - product families"
+    "Factory의 종류 | 구현 방법 | 소스코드\n",
+    "----------|----------|----------\n",
+    "Simple Factory | if문으로 사용객체의 new()를 결정. | Pizza createPizza(type:String)\n",
+    "Factory Method | Creator - abstract factory method.<br>Product - factory에 대응 | abstract Pizza createPizza(type:String)\n",
+    "Abstract Factory | Creator - abstract factory<br>Product - abstract factory | new CheesePizza(f:PizzaIngredientFactory)"
    ]
   },
   {
@@ -332,8 +332,8 @@
     "%%plantuml\n",
     "@startuml\n",
     "class PizzaStore {\n",
-    "    -factory:SimplePizzaFactory\n",
-    "    +PIzzaStore(f:SimplePizzaFactory)\n",
+    "    factory:SimplePizzaFactory\n",
+    "    +PizzaStore(f:SimplePizzaFactory)\n",
     "    +orderPizza(type:String):Pizza\n",
     "}\n",
     "class SimplePizzaFactory {\n",
@@ -943,25 +943,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# %load ./src/headfirst/factory/pizzas/PizzaStore.java\n",
-    "package headfirst.factory.pizzas;\n",
+    "# %load ./src/headfirst/factory/pizzafm/PizzaStore.java\n",
+    "package headfirst.factory.pizzafm;\n",
     "\n",
-    "public class PizzaStore {\n",
-    "\tSimplePizzaFactory factory;\n",
+    "public abstract class PizzaStore {\n",
     " \n",
-    "\tpublic PizzaStore(SimplePizzaFactory factory) { \n",
-    "\t\tthis.factory = factory;\n",
-    "\t}\n",
+    "\tabstract Pizza createPizza(String item);\n",
+    " \n",
     "\tpublic Pizza orderPizza(String type) {\n",
-    "\t\tPizza pizza;\n",
-    "\t\tpizza = factory.createPizza(type);\n",
+    "\t\tPizza pizza = createPizza(type);\n",
+    "\t\tSystem.out.println(\"--- Making a \" + pizza.getName() + \" ---\");\n",
     "\t\tpizza.prepare();\n",
     "\t\tpizza.bake();\n",
     "\t\tpizza.cut();\n",
