--- a/6_singleton.ipynb
+++ b/6_singleton.ipynb
@@ -72,13 +72,12 @@
     "    * 커피가 오랫 동안 나오지 않아서, 다른 바리스타에게 '커피가 나오지 않았다'고 말하는 경우\n",
     "    * 바리스타는 누가 커피를 만들고 있는지 서로 확인하지 않고, 새로 커피를 만들게 되면 문제가 된다.\n",
     "    * 하나의 주문에 커피는 여러 잔이 나올 수 있게 된다.\n",
-    "* 문제\n",
     "\n",
     "문제 | 해결방안\n",
     "-----|-----\n",
-    "'커피가 나오지 않았다'고 할 때마다 커피를 만들면 문제 | thread 제어\n",
-    "누가 만들고 있으면 새로 만들지 않음 | 객체를 1개만 생성\n",
-    "한 사람이 대량의 주문을 하는 독점의 문제 | 우선순위 조정"
+    "'커피가 나오지 않았다'고 할 때마다 커피를 만드는 문제 | thread 제어\n",
+    "주문을 받고, 관리하는 창구의 '단일화' 문제 | 객체를 1개만 생성\n",
+    "한 사람이 대량으로 주문을 처리하는 '독점'의 문제 | 우선순위 조정"
    ]
   },
   {
@@ -178,8 +177,7 @@
     "```\n",
     "\n",
     "* DCL Double Checked Locking (p.182)\n",
-    "    * thread-safety reduces the performance because of cost associated with the synchronized method\n",
-    "    * DCL 원칙\n",
+    "    * threadsafe에서 동기화를 유지하려면:\n",
     "        * thread가 동시에 동일한 함수를 사용하지 못하게 함.\n",
     "        * the synchronized block is used with 'if'문\n",
     "        * 사용하는 thread는 잠금사용. 다른 thread가 사용하려면 대기. "
